# fiscal-auditor

./: .env.etl  .env.etl.example  .env.example  .gitignore  AUTENTICACAO.md  CAMPOS_REFORMA_TRIBUTARIA.md  CONCLUSAO_FASE1.md  DATABASE_API.md  EXPORTACAO.md  FASE1_DASHBOARD.md  GUIA_ETL.md  IMPLEMENTACAO_FASE1.md  PLANO_ETL_ROBUSTO.md  README.md  SETUP_RAPIDO.md  SYSTEM_OVERVIEW.md  adicionar_colunas_faltantes.py  adicionar_colunas_icms_mono.sql  analisar_xsd_completo.py  analisar_xsd_nfe.py  app.py  campos_nfe_mapeamento.md  criar_empresas.py  criar_tabelas_empresas.py  criar_usuario.py  datalake_integration.py  estrutura_nfe_completa.json  etl.bat  example.py  executar_migracao.py  executar_migracao_fase1.py  executar_migracao_reforma.py  exemplo_api.py  exemplo_etl.py  init_db.py  migrar_icms_mono.py  pyproject.toml  relatorio_fase1.py  reprocessar_completo.py  reprocessar_fase1.py  (+12 more)
admin_portal/: README.md  app_admin.py  requirements.txt
admin_portal/models/: __init__.py  admin_models_new.py  fiscal_auditor_models.py  models.py
etl_service/: CONFIGURACAO.md  GERENCIAMENTO_ARQUIVOS.md  README.md  TROUBLESHOOTING.md  __init__.py  config.py  consultas_uteis.sql  database.py  empresa_service.py  extractor.py  loader.py  models.py  pipeline.py  requirements.txt  transformer.py
static/: style.css
templates/: analise_tributaria.html  bi_fiscal.html  dashboard.html  index.html  index_new.html  login.html  painel.html  produtos.html  relatorios_fase1.html
tests/: __init__.py  test_calculator.py  test_integration.py  test_models.py  test_reports.py  test_validator.py
(+34 files in other folders)
